WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164835
Wasm function parser should use template functions for each binary and unary opcode
https://bugs.webkit.org/show_bug.cgi?id=164835
Summary
Wasm function parser should use template functions for each binary and unary ...
Keith Miller
Reported
2016-11-16 14:44:06 PST
Wasm function parser should use template functions for each binary and unary opcode
Attachments
Patch
(21.57 KB, patch)
2016-11-16 14:49 PST
,
Keith Miller
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2016-11-16 14:49:10 PST
Created
attachment 294979
[details]
Patch
WebKit Commit Bot
Comment 2
2016-11-16 14:50:25 PST
Attachment 294979
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp:767: Bad include order. Mixing system and custom headers. [build/include_order] [4] ERROR: Source/JavaScriptCore/wasm/WasmFunctionParser.h:211: Non-label code inside switch statements should be indented. [whitespace/indent] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 3
2016-11-16 15:14:00 PST
Comment on
attachment 294979
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=294979&action=review
LGTM
> Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp:169 > +
Why the blank line here but not below at line 171-172?
Keith Miller
Comment 4
2016-11-16 15:18:13 PST
Comment on
attachment 294979
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=294979&action=review
>> Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp:169 >> + > > Why the blank line here but not below at line 171-172?
It felt weird to have a blank have the templates on top of each other. I don't feel strongly about it. So, I can change it if you want.
Keith Miller
Comment 5
2016-11-16 15:34:47 PST
Committed
r208821
: <
http://trac.webkit.org/changeset/208821
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug