Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp
@@ -53,11 +53,11 @@ void dumpProcedure(void* ptr)
 
 namespace JSC { namespace Wasm {
 
-namespace {
-
 using namespace B3;
 
+namespace {
 const bool verbose = false;
+}
 
 inline B3::Opcode toB3Op(BinaryOpType op)
 {
@@ -164,8 +164,10 @@ public:
     bool WARN_UNUSED_RETURN store(StoreOpType, ExpressionType pointer, ExpressionType value, uint32_t offset);
 
     // Basic operators
-    bool WARN_UNUSED_RETURN binaryOp(BinaryOpType, ExpressionType left, ExpressionType right, ExpressionType& result);
-    bool WARN_UNUSED_RETURN unaryOp(UnaryOpType, ExpressionType arg, ExpressionType& result);
+    template<OpType>
+    bool WARN_UNUSED_RETURN addOp(ExpressionType arg, ExpressionType& result);
+    template<OpType>
+    bool WARN_UNUSED_RETURN addOp(ExpressionType left, ExpressionType right, ExpressionType& result);
     bool WARN_UNUSED_RETURN addSelect(ExpressionType condition, ExpressionType nonZero, ExpressionType zero, ExpressionType& result);
 
     // Control flow
@@ -450,22 +452,6 @@ bool B3IRGenerator::store(StoreOpType op, ExpressionType pointer, ExpressionType
     return true;
 }
 
-bool B3IRGenerator::unaryOp(UnaryOpType op, ExpressionType arg, ExpressionType& result)
-{
-    if (!isSimple(op))
-        return false;
-    result = m_currentBlock->appendNew<Value>(m_proc, toB3Op(op), Origin(), arg);
-    return true;
-}
-
-bool B3IRGenerator::binaryOp(BinaryOpType op, ExpressionType left, ExpressionType right, ExpressionType& result)
-{
-    if (!isSimple(op))
-        return false;
-    result = m_currentBlock->appendNew<Value>(m_proc, toB3Op(op), Origin(), left, right);
-    return true;
-}
-
 bool B3IRGenerator::addSelect(ExpressionType condition, ExpressionType nonZero, ExpressionType zero, ExpressionType& result)
 {
     result = m_currentBlock->appendNew<Value>(m_proc, B3::Select, Origin(), condition, nonZero, zero);
@@ -675,9 +661,6 @@ void B3IRGenerator::dump(const Vector<ControlEntry>& controlStack, const Express
     dataLogLn("\n");
 }
 
-} // anonymous namespace
-
-
 static std::unique_ptr<Compilation> createJSWrapper(VM& vm, const Signature* signature, MacroAssemblerCodePtr mainFunction, Memory* memory)
 {
     Procedure proc;
@@ -779,5 +762,7 @@ std::unique_ptr<FunctionCompilation> parseAndCompile(VM& vm, const uint8_t* func
 }
 
 } } // namespace JSC::Wasm
+
+#include "WasmB3IRGeneratorInlines.h"
 
 #endif // ENABLE(WEBASSEMBLY)
